collects/tests/typed-racket/fail/pr13526.rkt
#;
(exn-pred #rx"Expected result: AnyValues")

#lang typed/racket

(map "hello" "world")
